# winem-sport-betting-aggregator

./: Cargo.toml  Rocket.toml  diesel.toml
migrations/2024-07-16-184618_create_contracts/: up.sql
migrations/2024-07-18-043443_create_bets/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
